# prod-rust-api

./: package.json
backend/: Cargo.toml  config.toml
backend/db/: init.sql
backend/resources/: config.local.toml  config.prod.toml
backend/scripts/: start-local-db.sh  stop-local-db.sh
backend/scripts/sql/: 1-create-db.sql  2-insert-local-data.sql
backend/scripts/test/sql/: 2-insert-local-data.sql
backend/src/: bin.rs  config.rs  lib.rs  main.rs  settings.rs  start.rs
backend/src/auth/: auth.rs
backend/src/base/: access_checker_helpers.rs  hash.rs  http.rs  id_generator.rs  mod.rs  request.rs  testlib.rs  time.rs
backend/src/health/: health.rs
backend/src/old/: asdfa.rs  main-old.rs  user.rs
backend/src/old/auth/: auth.rs  mod.rs  service.rs
backend/src/old/authasd/: auth_api.rs  auth_repo.rs  auth_service.rs  mod.rs
backend/src/old/crypto/: crypto.rs
backend/src/old/profile/: mod.rs  profile_api.rs  profile_id_generator.rs  profile_model.rs  profile_repo.rs
backend/src/services/: mod.rs
backend/src/services/auth/: auth_api.rs  auth_model.rs  auth_repo.rs  auth_service.rs  mod.rs
backend/src/services/base/: mod.rs
backend/src/services/health/: health_api.rs  mod.rs
backend/src/services/user/: mod.rs  user_access_checker.rs  user_api.rs  user_id_generator.rs  user_model.rs  user_repo.rs  user_service.rs
backend/src/user/: user.rs
backend/src/util/: access_checker_helpers.rs  error.rs  hash.rs  http.rs  middleware.rs  mod.rs  request.rs
backend/tests/: lib.rs
backend/tests/health/: health.rs  mod.rs
infra/: main.tf  (+1 more)
(+123 files in other folders)
