[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin.rs"
name = "backend"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
rand = "0.8.4"
ring = "0.16.20"
base64 = "0.13.0"
actix-web = "4.0.0-beta.5"
actix-service = "2.0.2"
async-trait = "0.1.52"
futures = "0.3.19"
tokio = { version = "1.16.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
config = "0.11.0"
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono"
]